sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:22: error: not found: value permutation
  } while (permutation==true)
           ^